--- a/input.css
+++ b/input.css
@@ -204,6 +204,7 @@
     .svg2{
         transform: translateY(160%);
         right: 30px;
+        bottom: 48px;
     }
 }
 
